--- a/index.html
+++ b/index.html
@@ -147,6 +147,13 @@
       <div class="card text-black bg-warning">
         <div class="card-header text-white">お知らせ</div>
         <div class="card-body">
+            <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">2018/03/10 1:25 JST</h5>
+                  <p class="card-text">所有権を移行しました</p>
+                </div>
+              </div>
+              <br>
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">2018/03/10 22:49 JST</h5>
