--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="card bg-primary">
             <div class="card-header text-white">サーバーの様子...</div>
         <div class="embed-responsive embed-responsive-16by9">
-      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Sz6F_Luv4Ls"></iframe>
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/b1o9DRJmQZY"></iframe>
       </div>
       </div>
       <br>
