--- a/index.html
+++ b/index.html
@@ -8,61 +8,65 @@
     <link rel="icon" sizes="256x256" href="logo.png">
     <title>MCDRServer - home</title>
     <link rel="stylesheet" href="bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/earlyaccess/sawarabigothic.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
+    <style>
+        body {
+          font-family: "Sawarabi Gothic";
+          margin: 0;
+        }
+
+        .cs-margin {
+          text-align: center;
+        }
+
+        .custom-center {
+          text-align: center;
+          margin: 8px;
+        }
+        .custom-p {
+          font-size: 25px;
+          font-family: "Sawarabi Gothic";
+        }
+
+      @media only screen and (max-width: 390px) {
+        .custom-p {
+          font-size: 15px;
+          font-family: "Sawarabi Gothic";
+        }
+      }
+      </style>
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="cs-margin navbar navbar-expand-lg navbar-light bg-light">
           <div class="container">
-        <a class="navbar-brand" href="#">MCDRServer</a>
+        <a class="navbar-brand" href="#"><img src="nav-logo.png" style="width: 100px;" class="img-fluid" alt="Responsive image"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-              <li class="nav-item active">
-                  <a class="nav-link" href="#">home</a>
-                </li>
-            <li class="nav-item">
-              <a class="nav-link" href="rule.html">ルールと規約</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://goo.gl/forms/baNOh2slVdDLqw3n1">再現キャスト募集中</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download">連携サーバー <span class="caret"></span></a>
-                <div class="dropdown-menu" aria-labelledby="dropdown">
-                <a class="dropdown-item" href="http://disneyserver.wixsite.com/disneycrafthp">DisneyCraft様 </a>
-                <a class="dropdown-item" href="https://www.crazynet.ml/">CrazyNET</a>
-              </div>
-            </li>
-          </li>
-          <li class="nav-item dropdown">
-           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download">リンク <span class="caret"></span></a>
-           <div class="dropdown-menu" aria-labelledby="dropdown">
-           <a class="dropdown-item" href="https://twitter.com/mcdr_server">Twitter</a>
-           <a class="dropdown-item" href="https://www.youtube.com/channel/UC0ra2JkCdxFTdMScNtwJG9w">Youtube</a>
-           <a class="dropdown-item" href="https://discordapp.com/invite/tMcFPcX">Discord</a>
-           </div>
-          </li>
-         </ul>
-        </div>
-       </div>
-      </nav>
-    </header>
-    <br>
 
-    <div class="container">
-     <div class="row">
-      <div class="col col-lg-8">
-       <div class="jumbotron" align="center">
-      <h1 class="text-warning">MCDR Server</h1>
-      <hr>
-      <p>ようこそ！MCDR Serverへ！<br>Welcome to the MCDR Server!</p>
-      <p>
-        <a class="btn btn-primary" href="rule.html" role="button">ルールを見て参加する!</a>
-        <a class="btn btn-primary" href="tutorial.html" role="button">マルチが初めての方はこちら</a>
-      </p>
-    </div>
+            <nav>
+                <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                  <a class="nav-item nav-link active text-primary" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true"><i style="font-size:30px;" class="fas fa-home"></i><br>Home</a>
+                  <a class="nav-item nav-link coler:#5EDD62;" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false"><i style="font-size:30px;" class="fas fa-newspaper"></i><br>ルールと規約</a>
+                  <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false"><i style="font-size:30px;" class="far fa-building"></i><br>再現キャスト募集中</a>
+                  <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download"><i style="font-size:30px;" class="fas fa-server"></i><br>連携サーバー<span class="caret"></span></a>
+                  <div class="dropdown-menu" aria-labelledby="dropdown">
+                  <a class="dropdown-item" href="http://disneyserver.wixsite.com/disneycrafthp">DisneyCraft様 </a>
+                  <a class="dropdown-item" href="https://www.crazynet.ml/">CrazyNET</a>
+                  </div>
+                  <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download"><i style="font-size:30px;" class="fas fa-link"></i><br>リンク<span class="caret"></span></a>
+                  <div class="dropdown-menu" aria-labelledby="dropdown">
+                  <a class="dropdown-item" href="https://twitter.com/mcdr_server">Twitter</a>
+                  <a class="dropdown-item" href="https://www.youtube.com/channel/UC0ra2JkCdxFTdMScNtwJG9w">Youtube</a>
+                  <a class="dropdown-item" href="https://discordapp.com/invite/tMcFPcX">Discord</a>
+                </div>
+               </div>
+              </nav>
+    </header>
 
     <div id="carousel" class="carousel slide" data-ride="carousel">
    <ol class="carousel-indicators">
@@ -74,52 +78,17 @@
    <div class="carousel-item active">
     <img class="d-block w-100" src="background1.jpg" alt="First slide">
      <div class="carousel-caption d-none d-md-block">
-      <h5 style="color:white;
-                 text-shadow:
-                 -1px -1px 0 black,
-                 1px -1px 0 black,
-                 -1px 1px 0 black,
-                 1px 1px 0 black;">ロビー</h5>
-      <p style="color:white;
-                text-shadow:
-                -1px -1px 0 black,
-                1px -1px 0 black,
-                -1px 1px 0 black,
-                1px 1px 0 black;">色々な世界に行くことができる。<br>ここでは、さまざまな世界へとつなぐことができる場所です。</p>
+
           </div>
        </div>
      <div class="carousel-item">
       <img class="d-block w-100" src="background2.jpg" alt="Third slide">
        <div class="carousel-caption d-none d-md-block">
-        <h5 style="color:white;
-                   text-shadow:
-                   -1px -1px 0 black,
-                   1px -1px 0 black,
-                   -1px 1px 0 black,
-                   1px 1px 0 black;">インディージョーンズクリスタルスカルの魔宮完全再現</h5>
-        <p style="color:white;
-                  text-shadow:
-                  -1px -1px 0 black,
-                  1px -1px 0 black,
-                  -1px 1px 0 black,
-                  1px 1px 0 black;">このマップはYoutubeよりレイコフ大佐さんから、<br>提供していただきました！インディージョーンズクリスタルスカルの魔宮を見学することができるマップです</p>
           </div>
       </div>
     <div class="carousel-item">
      <img class="d-block w-100" src="background3.jpg" alt="Third slide">
       <div class="carousel-caption d-none d-md-block">
-        <h5 style="color:white;
-                  text-shadow:
-                  -1px -1px 0 black,
-                  1px -1px 0 black,
-                  -1px 1px 0 black,
-                  1px 1px 0 black;">サバイバルワールド</h5>
-        <p style="color:white;
-                  text-shadow:
-                  -1px -1px 0 black,
-                  1px -1px 0 black,
-                  -1px 1px 0 black,
-                  1px 1px 0 black;">グランドオープン！</p>
         </div>
        </div>
       </div>
@@ -132,7 +101,20 @@
        <span class="sr-only">Next</span>
     </a>
    </div>
+
+      <nav class="nav bg-primary justify-content-center">
+          <div class="container custom-center">
+        <a class="navbar-brand font-weight-bold text-light custom-p">ようこそ！MCDR Serverへ！</a>
+        </div>
+        <nav>
+            </div>
+          </nav>
+      </nav>
       <br>
+
+      <div class="container">
+          <div class="row">
+              <div class="col col-lg-8">
 
       <div class="card text-black bg-success">
         <div class="card-header text-white">Japan Minecraft Servers</div>
