--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" sizes="256x256" href="logo.png">
     <title>MCDRServer - home</title>
     <link rel="stylesheet" href="bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/earlyaccess/sawarabigothic.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/sawarabigothic.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
     <style>
@@ -35,6 +35,8 @@
           font-size: 15px;
           font-family: "Sawarabi Gothic";
         }
+
+
       }
       </style>
   </head>
@@ -42,7 +44,7 @@
     <header>
       <nav class="cs-margin navbar navbar-expand-lg navbar-light bg-light">
           <div class="container">
-        <a class="navbar-brand" href="#"><img src="nav-logo.png" style="width: 100px;" class="img-fluid" alt="Responsive image"></a>
+        <a class="navbar-brand" href="#"><img src="img/nav-logo.png" style="width: 100px;" class="img-fluid" alt="Responsive image"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -73,24 +75,29 @@
      <li data-target="#carousel" data-slide-to="0" class="active"></li>
       <li data-target="#carousel" data-slide-to="1"></li>
        <li data-target="#carousel" data-slide-to="2"></li>
+        <li data-target="#carousel" data-slide-to="3"></li>
    </ol>
     <div class="carousel-inner">
-   <div class="carousel-item active">
-    <img class="d-block w-100" src="background1.jpg" alt="First slide">
-     <div class="carousel-caption d-none d-md-block">
-
-          </div>
-       </div>
-     <div class="carousel-item">
-      <img class="d-block w-100" src="background2.jpg" alt="Third slide">
-       <div class="carousel-caption d-none d-md-block">
-          </div>
+  <div class="carousel-item active">
+      <img class="d-block w-100" src="img/back1.jpg" alt="First slide">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
       </div>
     <div class="carousel-item">
-     <img class="d-block w-100" src="background3.jpg" alt="Third slide">
-      <div class="carousel-caption d-none d-md-block">
+      <img class="d-block w-100" src="img/back2.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
         </div>
-       </div>
+      </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/back3.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
+      </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="img/back3.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
+      </div>
       </div>
      <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
