--- a/index.html
+++ b/index.html
@@ -71,12 +71,6 @@
     </header>
 
     <div id="carousel" class="carousel slide" data-ride="carousel">
-   <ol class="carousel-indicators">
-     <li data-target="#carousel" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel" data-slide-to="1"></li>
-       <li data-target="#carousel" data-slide-to="2"></li>
-        <li data-target="#carousel" data-slide-to="3"></li>
-   </ol>
     <div class="carousel-inner">
   <div class="carousel-item active">
       <img class="d-block w-100" src="img/back1.jpg" alt="First slide">
@@ -111,7 +105,7 @@
 
       <nav class="nav bg-primary justify-content-center">
           <div class="container custom-center">
-        <a class="navbar-brand font-weight-bold text-light custom-p">ようこそ！MCDR Serverへ！</a>
+        <a class="navbar-brand font-weight-bold text-light custom-p">ようこそ！Minecraft Disney Resortへ！</a>
         </div>
         <nav>
             </div>
