--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           font-family: "Sawarabi Gothic";
         }
 
+
       @media only screen and (max-width: 990px) {
         .custom-p {
           font-size: 10px;
@@ -105,7 +106,7 @@
 
       <nav class="nav bg-primary justify-content-center">
           <div class="container custom-center">
-        <a class="navbar-brand font-weight-bold text-light custom-p">ようこそ！Minecraft Disney Resortへ！</a>
+        <a class="navbar-brand font-weight-bold text-light custom-p">ようこそ、Minecraft Disney Resortへ。</a>
         </div>
         <nav>
             </div>
