--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           font-size: 25px;
           font-family: "Sawarabi Gothic";
         }
+        .custom-faicon {
+          font-size: 30px;
+        }
 
 
       @media only screen and (max-width: 990px) {
@@ -36,8 +39,9 @@
           font-size: 10px;
           font-family: "Sawarabi Gothic";
         }
-
-
+        .custom-faicon {
+          font-size: 8px;
+        }
       }
       </style>
   </head>
@@ -53,10 +57,10 @@
 
             <nav>
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                  <a class="nav-item nav-link active text-primary" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true"><i style="font-size:30px;" class="fas fa-home"></i><br>Home</a>
-                  <a class="nav-item nav-link coler:#5EDD62;" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false"><i style="font-size:30px;" class="fas fa-newspaper"></i><br>ルールと規約</a>
-                  <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false"><i style="font-size:30px;" class="far fa-building"></i><br>再現キャスト募集中</a>
-                  <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download"><i style="font-size:30px;" class="fas fa-server"></i><br>連携サーバー<span class="caret"></span></a>
+                  <a class="nav-item nav-link active text-primary" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true"><i class="custom-faicon fas fa-home"></i><br>Home</a>
+                  <a class="nav-item nav-link coler:#5EDD62;" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false"><i  class="custom-faicon fas fa-newspaper"></i><br>ルールと規約</a>
+                  <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false"><i  class="custom-faicon far fa-building"></i><br>再現キャスト募集中</a>
+                  <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download"><i class="custom-faicon fas fa-server"></i><br>連携サーバー<span class="caret"></span></a>
                   <div class="dropdown-menu" aria-labelledby="dropdown">
                   <a class="dropdown-item" href="http://disneyserver.wixsite.com/disneycrafthp">DisneyCraft様 </a>
                   <a class="dropdown-item" href="https://www.crazynet.ml/">CrazyNET</a>
