--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   <a class="dropdown-item" href="http://disneyserver.wixsite.com/disneycrafthp">DisneyCraft様 </a>
                   <a class="dropdown-item" href="https://www.crazynet.ml/">CrazyNET</a>
                   </div>
-                  <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download"><i style="font-size:30px;" class="fas fa-link"></i><br>リンク<span class="caret"></span></a>
+                  <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download"><i class="custom-faicon fas fa-link"></i><br>リンク<span class="caret"></span></a>
                   <div class="dropdown-menu" aria-labelledby="dropdown">
                   <a class="dropdown-item" href="https://twitter.com/mcdr_server">Twitter</a>
                   <a class="dropdown-item" href="https://www.youtube.com/channel/UC0ra2JkCdxFTdMScNtwJG9w">Youtube</a>
