--- a/index.html
+++ b/index.html
@@ -32,11 +32,31 @@
         .custom-faicon {
           font-size: 30px;
         }
-
+        hr {
+	        text-align: center;
+          background-color: #2979CE;
+          border: 0px;
+          height: 1px;
+          margin-top: 25px;
+          margin-bottom: 25px; 
+        }
+        hr:after {
+	        content: "\002606";
+         	display: inline-block;
+        	position: relative;
+         	top: -22px;
+          left: 48%;
+         	padding: 0 20px;
+        	color: #2979CE;
+         	font-size: 20px;
+          /* -webkit-transform: rotate(1050deg);
+	        -moz-transform: rotate(105deg);
+         	transform: rotate(105deg); */
+        }
 
       @media only screen and (max-width: 990px) {
         .custom-p {
-          font-size: 20px;
+          font-size: 10px;
           font-family: "Sawarabi Gothic";
         }
         .custom-faicon {
@@ -112,11 +132,8 @@
           <div class="container custom-center">
         <a class="navbar-brand font-weight-bold text-light custom-p">ようこそ、Minecraft Disney Resortへ。</a>
         </div>
-        <nav>
-            </div>
-          </nav>
       </nav>
-      <br>
+      <hr>
 
       <div class="container">
           <div class="row">
