--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
       <nav class="cs-margin navbar navbar-expand-lg navbar-light bg-light">
           <div class="container">
         <a class="navbar-brand" href="#"><img src="img/nav-logo.png" style="width: 100px;" class="img-fluid" alt="Responsive image"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
         <div class="collapse navbar-collapse" id="navbarNav">
 
-            <nav>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
                   <a class="nav-item nav-link active text-primary" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true"><i class="custom-faicon fas fa-home"></i><br>Home</a>
                   <a class="nav-item nav-link coler:#5EDD62;" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false"><i  class="custom-faicon fas fa-newspaper"></i><br>ルールと規約</a>
@@ -92,6 +92,7 @@
                   <a class="dropdown-item" href="https://discordapp.com/invite/tMcFPcX">Discord</a>
                 </div>
                </div>
+
               </nav>
     </header>
 
