--- a/index.html
+++ b/index.html
@@ -80,32 +80,24 @@
                   <a class="nav-item nav-link active text-primary" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true"><i class="custom-faicon fas fa-home"></i><br>Home</a>
                   <a class="nav-item nav-link coler:#5EDD62;" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false"><i  class="custom-faicon fas fa-newspaper"></i><br>ルールと規約</a>
                   <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false"><i  class="custom-faicon far fa-building"></i><br>再現キャスト募集中</a>
+
+                <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download"><i class="custom-faicon fas fa-server"></i><br>連携サーバー<span class="caret"></span></a>
                   <div class="dropdown-menu" aria-labelledby="dropdown">
                   <a class="dropdown-item" href="http://disneyserver.wixsite.com/disneycrafthp">DisneyCraft様 </a>
                   <a class="dropdown-item" href="https://www.crazynet.ml/">CrazyNET</a>
                   </div>
+                </li>
+
+                <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download"><i class="custom-faicon fas fa-link"></i><br>リンク<span class="caret"></span></a>
                   <div class="dropdown-menu" aria-labelledby="dropdown">
                   <a class="dropdown-item" href="https://twitter.com/mcdr_server">Twitter</a>
                   <a class="dropdown-item" href="https://www.youtube.com/channel/UC0ra2JkCdxFTdMScNtwJG9w">Youtube</a>
                   <a class="dropdown-item" href="https://discordapp.com/invite/tMcFPcX">Discord</a>
+                </li>
                 </div>
                </div>
-               <ul class="nav flex-column">
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">Active</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                  </li>
-                </ul>
               </nav>
     </header>
 
