--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="www.mcdr.ml">
     <link rel="icon" sizes="256x256" href="logo.png">
     <title>MCDRServer - home</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/sawarabigothic.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
