--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           background-color: #2979CE;
         }
         
-        img {
+        .cs-img {
           border-radius: 5px;
           display: block;
           margin-left: auto;
@@ -233,7 +233,7 @@
     <div class="card-body">
     <p>Japan Minecraft Servers</p>
       <div class="custom-a">
-          <img class="img-fluid" src="https://minecraft.jp/servers/play.mcdr.ml/banner/5/560x95.png"><br>
+          <img class="img-fluid cs-img" src="https://minecraft.jp/servers/play.mcdr.ml/banner/5/560x95.png"><br>
           <a class="btn btn-outline-success" href="https://minecraft.jp/servers/play.mcdr.ml/vote" role="button">サーバーへ投票する</a>
           </div>
         </div>
